fixed merge problems and implement game store architecture